hard-gists/3943d55ca7eedf716ed6/run.log
=== Docker Run Log for 3943d55ca7eedf716ed6 ===
Started at: Mi 29. Okt 14:06:14 CET 2025

[2025-10-29 14:06:15] START: Running container for 3943d55ca7eedf716ed6
[2025-10-29 14:06:15] SUCCESS: Container 1574901b9bc4463aba970c57aa2d7bc4d95e56a416763953ccb760353aa97852 started for 3943d55ca7eedf716ed6
=== Container logs for 3943d55ca7eedf716ed6 ===
  File "/snippet.py", line 7
    print "got %s %s %s and %s" % (a, b, c, blah)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3943d55ca7eedf716ed6 ===
[2025-10-29 14:06:17] INFO: Container 1574901b9bc4463aba970c57aa2d7bc4d95e56a416763953ccb760353aa97852 has stopped
